Created form on page

--- a/fresh-fdk/app/template.html
+++ b/fresh-fdk/app/template.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" type="text/css" href="https://static.freshdev.io/fdk/2.0/assets/freshservice.css">
   </head>
   <body>
+    Hello, World!
+    <div id="ticket">
+      <form method="post">
+        Description of your problem:
+        <input type="text" name="desc"><br><br>
+        Urgency of the issue:
+        <select>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+        </select>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
     <div class="fw-widget-wrapper">
       <div class="logo"></div>
       <p id="apptext"></p>
