Created angular cocomponent

--- a/fresh-fdk/app/template.html
+++ b/fresh-fdk/app/template.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="https://static.freshdev.io/fdk/2.0/assets/freshservice.css">
   </head>
   <body>
-    Hello, World!
+    Hello, Valued User! Please fill in a ticket below.<br><br>
     <div id="ticket">
       <form method="post">
         Description of your problem:
